<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.AddTaskActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextTaskId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_id"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTaskId"
            android:layout_marginTop="16dp"
            android:hint="@string/task_name"
            android:minHeight="48dp"
            android:textColorHint="@color/colorHint" />

        <Button
            android:id="@+id/btnVoiceInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextDueTime"
            android:layout_marginTop="16dp"
            android:text="@string/voice_task" />

        <EditText
            android:id="@+id/editTextDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTaskName"
            android:layout_marginTop="16dp"
            android:hint="yyyy-MM-dd"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextDueTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextDueDate"
            android:layout_marginTop="16dp"
            android:hint="HH:mm:ss"
            android:inputType="number"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextDueTime"
            android:layout_marginTop="16dp"
            android:text="@string/add_task_button_text" />
    </RelativeLayout>
</ScrollView>
